--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,14 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
